--- a/package.json
+++ b/package.json
@@ -10,13 +10,21 @@
     "start": "next start"
   },
   "dependencies": {
+    "@zeit/fetch": "^5.1.1",
+    "hosted-git-info": "^3.0.2",
+    "lru-cache": "^5.1.1",
     "next": "9.1.4",
     "react": "16.12.0",
     "react-dom": "16.12.0",
-    "styled-components": "^4.4.1"
+    "styled-components": "^4.4.1",
+    "unfetch": "^4.1.0",
+    "url": "^0.11.0"
   },
   "devDependencies": {
+    "@types/hosted-git-info": "^2.7.0",
+    "@types/lru-cache": "^5.1.0",
     "@types/node": "^12.12.14",
+    "@types/node-fetch": "^2.5.4",
     "@types/styled-components": "^4.4.0",
     "ncp": "^2.0.0",
     "prettier": "^1.19.1",
