--- a/cli/package.json
+++ b/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "njt",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "description": "npm jump to (package navigation shortcuts you dreamed about)",
   "keywords": [
     "frog",
@@ -14,8 +14,7 @@
   "bugs": "https://github.com/kachkaev/njt/issues",
   "repository": {
     "type": "git",
-    "url": "https://github.com/kachkaev/njt.git",
-    "directory": "src/cli"
+    "url": "https://github.com/kachkaev/njt.git"
   },
   "license": "BSD-3-Clause",
   "author": {
