--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@zeit/fetch": "^5.1.1",
     "hosted-git-info": "^3.0.2",
     "lru-cache": "^5.1.1",
+    "markdown-to-jsx": "^6.10.3",
     "next": "9.1.4",
     "react": "16.12.0",
     "react-dom": "16.12.0",
@@ -23,6 +24,7 @@
   "devDependencies": {
     "@types/hosted-git-info": "^2.7.0",
     "@types/lru-cache": "^5.1.0",
+    "@types/markdown-to-jsx": "^6.9.1",
     "@types/node": "^12.12.14",
     "@types/node-fetch": "^2.5.4",
     "@types/styled-components": "^4.4.0",
