--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "hosted-git-info": "^3.0.2",
     "lru-cache": "^5.1.1",
     "markdown-to-jsx": "^6.10.3",
-    "next": "9.1.4",
-    "react": "16.12.0",
-    "react-dom": "16.12.0",
+    "next": "^9.1.5",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
     "styled-components": "^4.4.1",
     "unfetch": "^4.1.0",
     "url": "^0.11.0"
@@ -25,9 +25,9 @@
     "@types/hosted-git-info": "^2.7.0",
     "@types/lru-cache": "^5.1.0",
     "@types/markdown-to-jsx": "^6.9.1",
-    "@types/node": "^12.12.14",
+    "@types/node": "^12.12.17",
     "@types/node-fetch": "^2.5.4",
-    "@types/styled-components": "^4.4.0",
+    "@types/styled-components": "^4.4.1",
     "ncp": "^2.0.0",
     "prettier": "^1.19.1",
     "prettier-plugin-packagejson": "^2.0.5",
