--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "styled-components": "^4.4.1",
+    "styled-normalize": "^8.0.6",
     "unfetch": "^4.1.0",
     "url": "^0.11.0"
   },
