--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
   "scripts": {
     "build": "next build",
     "dev": "next dev",
-    "fix": "yarn fix:prettier",
+    "fix": "yarn fix:prettier; yarn fix:yarn-deduplicate",
     "fix:prettier": "prettier --write \"**/*\"",
-    "lint": "yarn lint:prettier && yarn lint:tsc",
+    "fix:yarn-deduplicate": "yarn-deduplicate --strategy=fewer",
+    "lint": "yarn lint:prettier && yarn lint:tsc && yarn fix:yarn-deduplicate",
     "lint:prettier": "prettier --check \"**/*\"",
     "lint:tsc": "tsc --project .",
+    "lint:yarn-deduplicate": "yarn-deduplicate --fail --list --strategy=fewer",
     "start": "next start"
   },
   "dependencies": {
@@ -35,6 +37,7 @@
     "ncp": "^2.0.0",
     "prettier": "^1.19.1",
     "prettier-plugin-packagejson": "^2.0.10",
-    "typescript": "^3.8.2"
+    "typescript": "^3.8.2",
+    "yarn-deduplicate": "^1.1.1"
   }
 }
