--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "@zeit/fetch": "^6.0.0",
     "hosted-git-info": "^3.0.4",
     "lru-cache": "^5.1.1",
-    "next": "^9.3.2",
+    "next": "^9.3.6",
+    "node-fetch": "^2.6.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "styled-components": "^5.0.1",
+    "react-is": "^16.13.1",
+    "styled-components": "^5.1.0",
     "styled-normalize": "^8.0.7",
     "unfetch": "^4.1.0",
     "url": "^0.11.0"
@@ -31,13 +33,13 @@
   "devDependencies": {
     "@types/hosted-git-info": "^3.0.0",
     "@types/lru-cache": "^5.1.0",
-    "@types/node": "^13.9.5",
-    "@types/node-fetch": "^2.5.5",
-    "@types/styled-components": "4.1.19",
+    "@types/node": "^13.13.4",
+    "@types/node-fetch": "^2.5.7",
+    "@types/styled-components": "^5.1.0",
     "ncp": "^2.0.0",
-    "prettier": "^2.0.2",
-    "prettier-plugin-packagejson": "^2.1.2",
-    "typescript": "^3.8.3",
+    "prettier": "^2.0.5",
+    "prettier-plugin-packagejson": "^2.2.2",
+    "typescript": "^3.9.1-rc",
     "yarn-deduplicate": "^2.0.0"
   }
 }
