--- a/package.json
+++ b/package.json
@@ -42,9 +42,8 @@
     "mem": "^6.1.0",
     "next": "^9.5.2",
     "node-fetch": "^2.6.0",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-is": "^16.13.1",
+    "react": "^17.0.0-rc.0",
+    "react-dom": "^17.0.0-rc.0",
     "styled-components": "^5.1.1",
     "styled-normalize": "^8.0.7",
     "terser": "^4.8.0",
