--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
   "scripts": {
     "build": "next build",
     "dev": "next dev",
-    "fix": "yarn fix:eslint; yarn fix:markdownlint; yarn fix:prettier; yarn fix:yarn-deduplicate",
+    "fix": "npm-run-all --continue-on-error fix:*",
     "fix:eslint": "eslint --fix \"**/*\"",
     "fix:markdownlint": "markdownlint --fix \"**/*\"",
     "fix:prettier": "prettier --write \"**/*\"",
     "fix:yarn-deduplicate": "yarn install && yarn-deduplicate --strategy=fewer && yarn install",
-    "lint": "yarn lint:eslint && yarn lint:markdownlint && yarn lint:prettier && yarn lint:tsc && yarn lint:yarn-deduplicate",
+    "lint": "npm-run-all --continue-on-error lint:*",
     "lint:eslint": "eslint \"**/*\" --report-unused-disable-directives",
     "lint:markdownlint": "markdownlint \"**/*\"",
     "lint:prettier": "prettier --check \"**/*\"",
@@ -66,6 +66,7 @@
     "lint-staged": "^10.2.11",
     "markdownlint-cli": "^0.23.2",
     "ncp": "^2.0.0",
+    "npm-run-all": "^4.1.5",
     "prettier": "^2.0.5",
     "typescript": "^3.9.7",
     "yarn-deduplicate": "^2.1.1"
