--- a/package.json
+++ b/package.json
@@ -37,16 +37,15 @@
     ]
   },
   "dependencies": {
+    "@kachkaev/react-inline-js": "^0.1.0",
     "hosted-git-info": "^3.0.5",
     "lru-cache": "^6.0.0",
-    "mem": "^6.1.0",
     "next": "^9.5.2",
     "node-fetch": "^2.6.0",
     "react": "^17.0.0-rc.0",
     "react-dom": "^17.0.0-rc.0",
     "styled-components": "^5.1.1",
     "styled-normalize": "^8.0.7",
-    "terser": "^4.8.0",
     "unfetch": "^4.1.0",
     "url": "^0.11.0",
     "use-dark-mode": "^2.3.1"
@@ -66,7 +65,6 @@
     "lint-staged": "^10.2.11",
     "markdownlint-cli": "^0.23.2",
     "ncp": "^2.0.0",
-    "npm-run-all": "^4.1.5",
     "prettier": "^2.0.5",
     "typescript": "^3.9.7",
     "yarn-deduplicate": "^2.1.1"
