--- a/package.json
+++ b/package.json
@@ -57,17 +57,18 @@
     "@kachkaev/prettier-config": "^1.0.0",
     "@types/hosted-git-info": "^3.0.0",
     "@types/lru-cache": "^5.1.0",
-    "@types/node": "^14.6.0",
+    "@types/node": "^14.6.2",
     "@types/node-fetch": "^2.5.7",
     "@types/styled-components": "^5.1.2",
     "eslint": "^6.8.0",
     "husky": "^4.2.5",
-    "lint-staged": "^10.2.11",
+    "lint-staged": "^10.2.13",
     "markdownlint-cli": "^0.23.2",
     "ncp": "^2.0.0",
-    "prettier": "^2.0.5",
+    "npm-run-all": "^4.1.5",
+    "prettier": "^2.1.1",
     "typescript": "^3.9.7",
-    "yarn-deduplicate": "^2.1.1"
+    "yarn-deduplicate": "^3.0.0"
   },
   "run-if-changed": {
     "yarn.lock": "yarn install --prefer-offline --pure-lockfile"
