--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -24,17 +24,4 @@ jobs:
       - name: Install dependencies
         run: yarn install --frozen-lockfile
 
-      - name: Lint with eslint
-        run: yarn lint:eslint
-
-      - name: Lint with markdownlint
-        run: yarn lint:markdownlint
-
-      - name: Lint with prettier
-        run: yarn lint:prettier
-
-      - name: Lint with tsc
-        run: yarn lint:tsc
-
-      - name: Lint with yarn-deduplicate
-        run: yarn lint:yarn-deduplicate
+      - name: Lint
