--- a/package.json
+++ b/package.json
@@ -36,6 +36,9 @@
       "prettier --write"
     ]
   },
+  "resolutions": {
+    "node-fetch": "^2.6.1"
+  },
   "dependencies": {
     "@kachkaev/react-inline-js": "^0.1.0",
     "hosted-git-info": "^3.0.5",
@@ -46,7 +49,7 @@
     "react-dom": "^17.0.0-rc.2",
     "styled-components": "^5.2.0",
     "styled-normalize": "^8.0.7",
-    "unfetch": "^4.1.0",
+    "unfetch": "^4.2.0",
     "url": "^0.11.0",
     "use-dark-mode": "^2.3.1"
   },
@@ -60,10 +63,10 @@
     "@types/node": "^14.11.2",
     "@types/node-fetch": "^2.5.7",
     "@types/styled-components": "^5.1.3",
-    "eslint": "^6.8.0",
+    "eslint": "^7.10.0",
     "husky": "^4.3.0",
     "lint-staged": "^10.4.0",
-    "markdownlint-cli": "^0.23.2",
+    "markdownlint-cli": "^0.24.0",
     "ncp": "^2.0.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.1.2",
