Towards yarn v2 (berry)

--- a/.eslintignore
+++ b/.eslintignore
@@ -8,9 +8,12 @@ LICENSE
 
 ## same as in .gitignore
 # dependencies
-node_modules
-.pnp
-.pnp.js
+.yarn/*
+!.yarn/releases
+!.yarn/plugins
+!.yarn/sdks
+!.yarn/versions
+.pnp.*
 
 # testing
 /coverage
