--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,10 @@
 # dependencies
-node_modules
-.pnp
-.pnp.js
+.yarn/*
+!.yarn/releases
+!.yarn/plugins
+!.yarn/sdks
+!.yarn/versions
+.pnp.*
 
 # testing
 /coverage
