--- a/package.json
+++ b/package.json
@@ -7,17 +7,17 @@
   "scripts": {
     "build": "next build",
     "dev": "next dev",
-    "fix": "npm-run-all --continue-on-error fix:*",
+    "fix": "npm-run-all --continue-on-error \"fix:*\"",
     "fix:eslint": "eslint --fix \"**/*\"",
     "fix:markdownlint": "markdownlint --fix \"**/*\"",
     "fix:prettier": "prettier --write \"**/*\"",
-    "fix:yarn-deduplicate": "yarn install && yarn-deduplicate --strategy=fewer && yarn install",
-    "lint": "npm-run-all --continue-on-error lint:*",
+    "fix:yarn-dedupe": "yarn dedupe",
+    "lint": "npm-run-all --continue-on-error \"lint:*\"",
     "lint:eslint": "eslint \"**/*\" --report-unused-disable-directives",
     "lint:markdownlint": "markdownlint \"**/*\"",
     "lint:prettier": "prettier --check \"**/*\"",
     "lint:tsc": "tsc --project .",
-    "lint:yarn-deduplicate": "yarn-deduplicate --fail --list --strategy=fewer",
+    "lint:yarn-dedupe": "yarn dedupe --check",
     "start": "next start"
   },
   "husky": {
@@ -62,7 +62,9 @@
     "@types/lru-cache": "^5.1.0",
     "@types/node": "^14.11.10",
     "@types/node-fetch": "^2.5.7",
+    "@types/react": "^16.9.53",
     "@types/styled-components": "^5.1.4",
+    "babel-plugin-styled-components": "^1.11.1",
     "eslint": "^7.11.0",
     "husky": "^4.3.0",
     "lint-staged": "^10.4.2",
@@ -70,8 +72,7 @@
     "ncp": "^2.0.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.1.2",
-    "typescript": "^3.9.7",
-    "yarn-deduplicate": "^3.0.0"
+    "typescript": "^3.9.7"
   },
   "run-if-changed": {
     "yarn.lock": "yarn install --prefer-offline --pure-lockfile"
