Use new eslint rules

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -3,3 +3,6 @@ packageExtensions:
   styled-components@*:
     dependencies:
       react-is: "*"
+  eslint-module-utils@*:
+    dependencies:
+      eslint-import-resolver-node: "*"
