--- a/package.json
+++ b/package.json
@@ -40,11 +40,23 @@
     "node-fetch": "^2.6.1"
   },
   "dependencies": {
-    "@kachkaev/react-inline-js": "^0.1.0",
+    "@kachkaev/react-inline-js": "^0.2.0",
+    "@typescript-eslint/eslint-plugin": "^4.4.1",
+    "@typescript-eslint/parser": "^4.4.1",
+    "eslint-config-prettier": "^6.13.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jest": "^24.1.0",
+    "eslint-plugin-json": "^2.1.2",
+    "eslint-plugin-react": "^7.21.4",
+    "eslint-plugin-react-hooks": "^4.1.2",
+    "eslint-plugin-simple-import-sort": "^5.0.3",
+    "eslint-plugin-testing-library": "^3.9.2",
     "hosted-git-info": "^3.0.7",
     "lru-cache": "^6.0.0",
     "next": "^9.5.5",
     "node-fetch": "^2.6.1",
+    "prettier-plugin-packagejson": "^2.2.6",
+    "prettier-plugin-sh": "^0.6.0",
     "react": "^17.0.0-rc.3",
     "react-dom": "^17.0.0-rc.3",
     "styled-components": "^5.2.0",
@@ -55,8 +67,8 @@
   },
   "devDependencies": {
     "@hkdobrev/run-if-changed": "^0.3.1",
-    "@kachkaev/eslint-config-react": "^0.1.1",
-    "@kachkaev/markdownlint-config": "^0.1.0",
+    "@kachkaev/eslint-config-react": "^0.2.0",
+    "@kachkaev/markdownlint-config": "^0.2.0",
     "@kachkaev/prettier-config": "^1.0.0",
     "@types/hosted-git-info": "^3.0.1",
     "@types/lru-cache": "^5.1.0",
@@ -64,15 +76,17 @@
     "@types/node-fetch": "^2.5.7",
     "@types/react": "^16.9.53",
     "@types/styled-components": "^5.1.4",
+    "@typescript-eslint/eslint-plugin": "^4.4.1",
     "babel-plugin-styled-components": "^1.11.1",
     "eslint": "^7.11.0",
     "husky": "^4.3.0",
+    "jest": "^26.5.3",
     "lint-staged": "^10.4.2",
     "markdownlint-cli": "^0.24.0",
     "ncp": "^2.0.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.1.2",
-    "typescript": "^3.9.7"
+    "typescript": "^4.0.3"
   },
   "run-if-changed": {
     "yarn.lock": "yarn install"
