--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
   "scripts": {
     "build": "next build",
     "dev": "next dev",
-    "fix": "npm-run-all --continue-on-error fix:*",
+    "fix": "npm-run-all --continue-on-error \"fix:*\"",
     "fix:eslint": "eslint --fix \"**/*\"",
     "fix:markdownlint": "markdownlint --fix \"**/*\"",
     "fix:prettier": "prettier --write \"**/*\"",
     "fix:yarn-deduplicate": "yarn install && yarn-deduplicate --strategy=fewer && yarn install",
-    "lint": "npm-run-all --continue-on-error lint:*",
+    "lint": "npm-run-all --continue-on-error \"lint:*\"",
     "lint:eslint": "eslint \"**/*\" --report-unused-disable-directives",
     "lint:markdownlint": "markdownlint \"**/*\"",
     "lint:prettier": "prettier --check \"**/*\"",
@@ -40,7 +40,7 @@
     "node-fetch": "^2.6.1"
   },
   "dependencies": {
-    "@kachkaev/react-inline-js": "^0.1.0",
+    "@kachkaev/react-inline-js": "^0.2.0",
     "hosted-git-info": "^3.0.7",
     "lru-cache": "^6.0.0",
     "next": "^9.5.5",
@@ -55,8 +55,8 @@
   },
   "devDependencies": {
     "@hkdobrev/run-if-changed": "^0.3.1",
-    "@kachkaev/eslint-config-react": "^0.1.1",
-    "@kachkaev/markdownlint-config": "^0.1.0",
+    "@kachkaev/eslint-config-react": "^0.2.0",
+    "@kachkaev/markdownlint-config": "^0.2.0",
     "@kachkaev/prettier-config": "^1.0.0",
     "@types/hosted-git-info": "^3.0.1",
     "@types/lru-cache": "^5.1.0",
@@ -65,12 +65,13 @@
     "@types/styled-components": "^5.1.4",
     "eslint": "^7.11.0",
     "husky": "^4.3.0",
+    "jest": "^26.5.3",
     "lint-staged": "^10.4.2",
     "markdownlint-cli": "^0.24.0",
     "ncp": "^2.0.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.1.2",
-    "typescript": "^3.9.7",
+    "typescript": "^4.0.3",
     "yarn-deduplicate": "^3.0.0"
   },
   "run-if-changed": {
