--- a/package.json
+++ b/package.json
@@ -55,8 +55,6 @@
     "lru-cache": "^6.0.0",
     "next": "^9.5.5",
     "node-fetch": "^2.6.1",
-    "prettier-plugin-packagejson": "^2.2.6",
-    "prettier-plugin-sh": "^0.6.0",
     "react": "^17.0.0-rc.3",
     "react-dom": "^17.0.0-rc.3",
     "styled-components": "^5.2.0",
@@ -69,7 +67,7 @@
     "@hkdobrev/run-if-changed": "^0.3.1",
     "@kachkaev/eslint-config-react": "^0.2.0",
     "@kachkaev/markdownlint-config": "^0.2.0",
-    "@kachkaev/prettier-config": "^1.0.0",
+    "@kachkaev/prettier-config": "^1.2.0",
     "@types/hosted-git-info": "^3.0.1",
     "@types/lru-cache": "^5.1.0",
     "@types/node": "^14.11.10",
@@ -87,6 +85,11 @@
     "npm-run-all": "^4.1.5",
     "prettier": "^2.1.2",
     "typescript": "^4.0.3"
+  },
+  "dependenciesMeta": {
+    "@kachkaev/prettier-config@1.0.0": {
+      "unplugged": true
+    }
   },
   "run-if-changed": {
     "yarn.lock": "yarn install"
