--- a/package.json
+++ b/package.json
@@ -43,10 +43,10 @@
     "@kachkaev/react-inline-js": "^0.2.0",
     "hosted-git-info": "^3.0.7",
     "lru-cache": "^6.0.0",
-    "next": "^9.5.5",
+    "next": "^10.0.0",
     "node-fetch": "^2.6.1",
-    "react": "^17.0.0-rc.3",
-    "react-dom": "^17.0.0-rc.3",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "styled-components": "^5.2.0",
     "styled-normalize": "^8.0.7",
     "unfetch": "^4.2.0",
@@ -55,24 +55,24 @@
   },
   "devDependencies": {
     "@hkdobrev/run-if-changed": "^0.3.1",
-    "@kachkaev/eslint-config-react": "^0.2.0",
+    "@kachkaev/eslint-config-react": "^0.2.1",
     "@kachkaev/markdownlint-config": "^0.2.0",
-    "@kachkaev/prettier-config": "^1.0.0",
+    "@kachkaev/prettier-config": "^1.2.0",
     "@types/hosted-git-info": "^3.0.1",
     "@types/lru-cache": "^5.1.0",
-    "@types/node": "^14.11.10",
+    "@types/node": "^14.14.5",
     "@types/node-fetch": "^2.5.7",
     "@types/styled-components": "^5.1.4",
-    "eslint": "^7.11.0",
+    "eslint": "^7.12.1",
     "husky": "^4.3.0",
-    "jest": "^26.5.3",
-    "lint-staged": "^10.4.2",
+    "jest": "^26.6.1",
+    "lint-staged": "^10.5.0",
     "markdownlint-cli": "^0.24.0",
     "ncp": "^2.0.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.1.2",
-    "typescript": "^4.0.3",
-    "yarn-deduplicate": "^3.0.0"
+    "typescript": "^4.0.5",
+    "yarn-deduplicate": "^3.1.0"
   },
   "run-if-changed": {
     "yarn.lock": "yarn install --prefer-offline --pure-lockfile"
