Change yarn path

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,8 +1,9 @@
-yarnPath: ".yarn/releases/yarn-berry.cjs"
 packageExtensions:
-  styled-components@*:
-    dependencies:
-      react-is: "*"
   eslint-module-utils@*:
     dependencies:
       eslint-import-resolver-node: "*"
+  styled-components@*:
+    dependencies:
+      react-is: "*"
+
+yarnPath: .yarn/releases/yarn-2.3.3.cjs
