--- a/.github/workflows/check-codebase.yml
+++ b/.github/workflows/check-codebase.yml
@@ -1,4 +1,4 @@
-name: Checks
+name: Check codebase
 
 on:
   push:
@@ -10,8 +10,8 @@ on:
 
 jobs:
   lint:
-    name: Linting
-    runs-on: ubuntu-latest
+    name: Lint
+    runs-on: ubuntu-20.04
     steps:
       - name: Check out repository
         uses: actions/checkout@v2
@@ -19,10 +19,10 @@ jobs:
       - name: Setup node
         uses: actions/setup-node@v1
         with:
-          node-version: 12
+          node-version: 14
 
       - name: Install dependencies
         run: yarn install --frozen-lockfile
 
-      - name: Lint
+      - name: Run yarn lint
         run: yarn lint
