Replace now.sh with vercel.com
Ref: https://vercel.com/changelog/urls-are-becoming-consistent

--- a/cli/package.json
+++ b/cli/package.json
@@ -10,7 +10,7 @@
     "productivity",
     "shortcut"
   ],
-  "homepage": "https://njt.now.sh",
+  "homepage": "https://njt.vercel.app",
   "bugs": "https://github.com/kachkaev/njt/issues",
   "repository": {
     "type": "git",
