--- a/cli/package.json
+++ b/cli/package.json
@@ -35,8 +35,11 @@
   },
   "dependencies": {
     "chalk": "^4.1.2",
-    "commander": "^7.2.0",
+    "commander": "^8.1.0",
     "find-package-json": "^1.2.0",
     "open": "^8.2.1"
+  },
+  "engines": {
+    "node": ">=12.17"
   }
 }
