--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "@typescript-eslint/parser": "^4.22.0",
     "babel-plugin-styled-components": "^1.12.0",
     "eslint": "^7.32.0",
+    "eslint-config-next": "^11.0.1",
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jest": "^24.3.5",
