--- a/package.json
+++ b/package.json
@@ -70,5 +70,6 @@
     "prettier": "~2.2.1",
     "typescript": "^4.4.3",
     "yarn-deduplicate": "^3.1.0"
-  }
+  },
+  "packageManager": "yarn@3.0.2"
 }
