--- a/package.json
+++ b/package.json
@@ -28,11 +28,19 @@
       "prettier --write"
     ]
   },
+  "resolutions": {
+    "@typescript-eslint/eslint-plugin": "^5.4.0",
+    "@typescript-eslint/parser": "^5.4.0",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-jest": "^25.2.4",
+    "eslint-plugin-json": "^3.1.0",
+    "eslint-plugin-testing-library": "^5.0.0"
+  },
   "dependencies": {
     "@kachkaev/react-inline-js": "^0.2.0",
     "hosted-git-info": "^4.0.2",
     "lru-cache": "^6.0.0",
-    "next": "^11.1.2",
+    "next": "^12.0.5-canary.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "styled-components": "^5.3.3",
@@ -46,12 +54,12 @@
     "@kachkaev/prettier-config": "^1.2.0",
     "@types/hosted-git-info": "^3.0.2",
     "@types/lru-cache": "^5.1.1",
-    "@types/node": "^16.11.4",
+    "@types/node": "^16.11.9",
     "@types/styled-components": "^5.1.15",
-    "eslint": "^7.32.0",
+    "eslint": "^8.2.0",
     "husky": "^7.0.4",
-    "lint-staged": "^11.2.4",
-    "markdownlint-cli": "^0.29.0",
+    "lint-staged": "^12.0.3",
+    "markdownlint-cli": "^0.30.0",
     "ncp": "^2.0.0",
     "npm-run-all": "^4.1.5",
     "prettier": "~2.2.1",
