Upgrade from Yarn v1 to v3 while keeping node_modules

--- a/.eslintignore
+++ b/.eslintignore
@@ -1,15 +1,30 @@
-## extensions
+#####################
+## Specific to ESLint
+#####################
+
+# Ignore all extensions (folders with . are allowed)
 *.*
+!.*/
+!*.*/
+
+# Allow certain extensions
 !*.js
 !*.json
 !*.ts
 !*.tsx
 
-## same as in .gitignore
+########################
+## Same as in .gitignore
+########################
+
 # dependencies
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
 node_modules
-.pnp
-.pnp.js
 
 # testing
 /coverage
@@ -30,3 +45,11 @@ yarn-error.log*
 
 # custom
 cli/README.md
+
+#########################
+## Shared between linters
+#########################
+
+.git/
+.husky/
+.yarn/
