--- a/.markdownlintignore
+++ b/.markdownlintignore
@@ -1,11 +1,27 @@
-## extensions
+###########################
+## Specific to Markdownlint
+###########################
+
+# Ignore all extensions (folders with . are allowed)
 *.*
+!.*/
+!*.*/
+
+# Allow certain extensions
 !*.md
 
+########################
+## Same as in .gitignore
+########################
+
 # dependencies
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
 node_modules
-.pnp
-.pnp.js
 
 # testing
 /coverage
@@ -26,3 +42,11 @@ yarn-error.log*
 
 # custom
 cli/README.md
+
+#########################
+## Shared between linters
+#########################
+
+.git/
+.husky/
+.yarn/
