--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,11 @@
 # dependencies
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
 node_modules
-.pnp
-.pnp.js
 
 # testing
 /coverage
