--- a/cli/package.json
+++ b/cli/package.json
@@ -27,9 +27,7 @@
     "name": "Alexander Kachkaev",
     "email": "alexander@kachkaev.ru"
   },
-  "bin": {
-    "njt": "cli.js"
-  },
+  "bin": "cli.js",
   "scripts": {
     "prepublishOnly": "yarn ncp ../README.md README.md"
   },
