--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
     "fix:eslint": "eslint --fix \"**/*\"",
     "fix:markdownlint": "markdownlint --fix \"**/*\"",
     "fix:prettier": "prettier --write \"**/*\"",
-    "fix:yarn-deduplicate": "yarn install && yarn-deduplicate --strategy=fewer && yarn install",
+    "fix:yarn-dedupe": "yarn dedupe",
     "lint": "npm-run-all --continue-on-error \"lint:*\"",
     "lint:eslint": "eslint \"**/*\" --report-unused-disable-directives",
     "lint:markdownlint": "markdownlint \"**/*\"",
     "lint:prettier": "prettier --check \"**/*\"",
     "lint:tsc": "tsc --project .",
-    "lint:yarn-deduplicate": "yarn-deduplicate --fail --list --strategy=fewer",
+    "lint:yarn-dedupe": "yarn dedupe --check",
     "prepare": "husky install",
     "start": "next start"
   },
@@ -63,7 +63,7 @@
     "ncp": "^2.0.0",
     "npm-run-all": "^4.1.5",
     "prettier": "~2.2.1",
-    "typescript": "^4.4.4",
-    "yarn-deduplicate": "^3.1.0"
-  }
+    "typescript": "^4.4.4"
+  },
+  "packageManager": "yarn@3.1.0"
 }
