Improve ignore files

--- a/.markdownlintignore
+++ b/.markdownlintignore
@@ -2,12 +2,11 @@
 ## Specific to Markdownlint
 ###########################
 
-# Ignore all extensions (folders with . are allowed)
-*.*
-!.*/
-!*.*/
+# Ignore all files (but still allow sub-folder scanning)
+*
+!*/
 
-# Allow certain extensions
+# Allow certain file types
 !*.md
 
 ########################
@@ -48,5 +47,4 @@ cli/README.md
 #########################
 
 .git/
-.husky/
 .yarn/
