--- a/.eslintignore
+++ b/.eslintignore
@@ -2,12 +2,11 @@
 ## Specific to ESLint
 #####################
 
-# Ignore all extensions (folders with . are allowed)
-*.*
-!.*/
-!*.*/
+# Ignore all files (but still allow sub-folder scanning)
+*
+!*/
 
-# Allow certain extensions
+# Allow certain file types
 !*.js
 !*.json
 !*.ts
@@ -51,5 +50,4 @@ cli/README.md
 #########################
 
 .git/
-.husky/
 .yarn/
