--- a/.markdownlintignore
+++ b/.markdownlintignore
@@ -1,11 +1,26 @@
-## extensions
-*.*
+###########################
+## Specific to Markdownlint
+###########################
+
+# Ignore all files (but still allow sub-folder scanning)
+*
+!*/
+
+# Allow certain file types
 !*.md
 
+########################
+## Same as in .gitignore
+########################
+
 # dependencies
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
 node_modules
-.pnp
-.pnp.js
 
 # testing
 /coverage
@@ -26,3 +41,10 @@ yarn-error.log*
 
 # custom
 cli/README.md
+
+#########################
+## Shared between linters
+#########################
+
+.git/
+.yarn/
