--- a/.prettierignore
+++ b/.prettierignore
@@ -1,5 +1,12 @@
-## extensions
-*.*
+#######################
+## Specific to Prettier
+#######################
+
+# Ignore all files (but still allow sub-folder scanning)
+*
+!*/
+
+# Allow certain file types
 !*.js
 !*.json
 !*.md
@@ -7,13 +14,18 @@
 !*.tsx
 !*.yml
 
-!/.github/
+########################
+## Same as in .gitignore
+########################
 
-## same as in .gitignore
 # dependencies
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
 node_modules
-.pnp
-.pnp.js
 
 # testing
 /coverage
@@ -34,3 +46,10 @@ yarn-error.log*
 
 # custom
 cli/README.md
+
+#########################
+## Shared between linters
+#########################
+
+.git/
+.yarn/
