--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,11 @@
 # dependencies
+.pnp.*
 .yarn/*
 !.yarn/patches
 !.yarn/plugins
 !.yarn/releases
 !.yarn/sdks
 !.yarn/versions
-node_modules
 
 # testing
 /coverage
