--- a/.markdownlintignore
+++ b/.markdownlintignore
@@ -14,13 +14,13 @@
 ########################
 
 # dependencies
+.pnp.*
 .yarn/*
 !.yarn/patches
 !.yarn/plugins
 !.yarn/releases
 !.yarn/sdks
 !.yarn/versions
-node_modules
 
 # testing
 /coverage
