--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,2 +1,9 @@
-nodeLinker: node-modules
+packageExtensions:
+  eslint-module-utils@*:
+    dependencies:
+      eslint-import-resolver-node: "*"
+  styled-components@*:
+    dependencies:
+      react-is: "*"
+
 yarnPath: .yarn/releases/yarn-3.1.0.cjs
