--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,6 @@
     "jsx": "preserve",
     "incremental": true
   },
-  "exclude": ["node_modules"],
+  "exclude": [],
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"]
 }
