--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "@kachkaev/react-inline-js": "^0.2.0",
     "hosted-git-info": "^4.0.2",
     "lru-cache": "^6.0.0",
-    "next": "12.0.4",
+    "next": "^12.0.5-canary.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "styled-components": "^5.3.3",
