--- a/package.json
+++ b/package.json
@@ -28,6 +28,14 @@
       "prettier --write"
     ]
   },
+  "resolutions": {
+    "@typescript-eslint/eslint-plugin": "^5.4.0",
+    "@typescript-eslint/parser": "^5.4.0",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-jest": "^25.2.4",
+    "eslint-plugin-json": "^3.1.0",
+    "eslint-plugin-testing-library": "^5.0.0"
+  },
   "dependencies": {
     "@kachkaev/react-inline-js": "^0.2.0",
     "hosted-git-info": "^4.0.2",
@@ -44,21 +52,13 @@
     "@kachkaev/eslint-config-react": "^0.2.3",
     "@kachkaev/markdownlint-config": "^0.2.0",
     "@kachkaev/prettier-config": "^1.2.0",
+    "@rushstack/eslint-patch": "^1.1.0",
     "@types/hosted-git-info": "^3.0.2",
     "@types/lru-cache": "^5.1.1",
     "@types/node": "^16.11.9",
     "@types/react": "^17.0.35",
     "@types/styled-components": "^5.1.15",
-    "@typescript-eslint/eslint-plugin": "^5.4.0",
-    "@typescript-eslint/parser": "^5.4.0",
     "eslint": "^8.2.0",
-    "eslint-plugin-import": "^2.25.3",
-    "eslint-plugin-jest": "^25.2.4",
-    "eslint-plugin-json": "^3.1.0",
-    "eslint-plugin-react": "^7.27.1",
-    "eslint-plugin-react-hooks": "^4.3.0",
-    "eslint-plugin-simple-import-sort": "^5.0.3",
-    "eslint-plugin-testing-library": "^5.0.0",
     "husky": "^7.0.4",
     "lint-staged": "^12.0.3",
     "markdownlint-cli": "^0.30.0",
