Revert "Use latest yarn because of https://github.com/vercel/next.js/issues/30873"
This reverts commit d331ba53a2e2f5f8f226a741be4c3ccb74914a5d.

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -6,4 +6,4 @@ packageExtensions:
     dependencies:
       react-is: "*"
 
-yarnPath: .yarn/releases/yarn-sources.cjs
+yarnPath: .yarn/releases/yarn-3.1.0.cjs
