--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@types/hosted-git-info": "^3.0.2",
     "@types/lru-cache": "^5.1.1",
     "@types/node": "^16.11.9",
+    "@types/react": "^17.0.36",
     "@types/styled-components": "^5.1.15",
     "eslint": "^8.2.0",
     "husky": "^7.0.4",
