--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "ncp": "^2.0.0",
     "npm-run-all": "^4.1.5",
     "prettier": "~2.2.1",
-    "typescript": "4.4.4"
+    "typescript": "^4.4.4"
   },
-  "packageManager": "yarn@3.1.0"
+  "packageManager": "yarn@3.2.0-rc.5"
 }
