--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
     "markdownlint-cli": "^0.30.0",
     "ncp": "^2.0.0",
     "npm-run-all": "^4.1.5",
-    "prettier": "~2.2.1",
+    "prettier": "^2.5.0",
     "typescript": "^4.5.2"
   },
   "packageManager": "yarn@3.1.0"
