--- a/.github/workflows/check-codebase.yml
+++ b/.github/workflows/check-codebase.yml
@@ -24,5 +24,65 @@ jobs:
       - name: Install dependencies
         run: yarn install --immutable
 
-      - name: Run yarn lint
-        run: yarn lint
+      - name: Run yarn lint:eslint
+        if: ${{ success() || failure() }}
+        run: |
+          if ! yarn lint:eslint; then
+            echo ''
+            echo ''
+            echo 'ℹ️ ℹ️ ℹ️'
+            echo 'Try running `yarn fix:eslint` locally to apply autofixes.'
+            echo 'ℹ️ ℹ️ ℹ️'
+            exit 1
+          fi
+
+      - name: Run yarn lint:markdownlint
+        if: ${{ success() || failure() }}
+        run: |
+          if ! yarn lint:markdownlint; then
+            echo ''
+            echo ''
+            echo 'ℹ️ ℹ️ ℹ️'
+            echo 'Try running `yarn fix:markdownlint` locally to apply autofixes.'
+            echo 'ℹ️ ℹ️ ℹ️'
+            exit 1
+          fi
+
+      - name: Run yarn lint:prettier
+        if: ${{ success() || failure() }}
+        run: |
+          if ! yarn lint:prettier; then
+            echo ''
+            echo ''
+            echo 'ℹ️ ℹ️ ℹ️'
+            echo 'Try running `yarn fix:prettier` locally to apply autofixes.'
+            echo 'ℹ️ ℹ️ ℹ️'
+            exit 1
+          fi
+
+      - name: Run yarn lint:tsc
+        if: ${{ success() || failure() }}
+        run: |
+          if ! yarn lint:tsc; then
+            echo ''
+            echo ''
+            echo 'ℹ️ ℹ️ ℹ️'
+            echo 'Please fix the above errors locally for the check to pass.'
+            echo 'If you don’t see them, try merging target branch into yours.'
+            echo 'ℹ️ ℹ️ ℹ️'
+            exit 1
+          fi
+
+      - name: Run yarn lint:yarn-dedupe
+        if: ${{ success() || failure() }}
+        run: |
+          if ! yarn lint:yarn-dedupe; then
+            echo ''
+            echo ''
+            echo 'ℹ️ ℹ️ ℹ️'
+            echo 'Some dependencies can be deduplicated, which will make yarn.lock'
+            echo 'lighter and potentially save us from unexplainable bugs.'
+            echo 'Please run `yarn fix:yarn-dedupe` locally and commit yarn.lock.'
+            echo 'ℹ️ ℹ️ ℹ️'
+            exit 1
+          fi
