--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -6,4 +6,4 @@ packageExtensions:
     dependencies:
       react-is: "*"
 
-yarnPath: .yarn/releases/yarn-3.2.0-rc.5.cjs
+yarnPath: .yarn/releases/yarn-3.1.1.cjs
