--- a/package.json
+++ b/package.json
@@ -67,5 +67,5 @@
     "prettier": "~2.2.1",
     "typescript": "^4.4.4"
   },
-  "packageManager": "yarn@3.2.0-rc.5"
+  "packageManager": "yarn@3.1.1"
 }
