--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "@kachkaev/react-inline-js": "^0.2.0",
     "hosted-git-info": "^4.0.2",
     "lru-cache": "^6.0.0",
-    "next": "^12.0.5-canary.13",
+    "next": "^12.0.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "styled-components": "^5.3.3",
@@ -52,7 +52,7 @@
     "@kachkaev/eslint-config-react": "^0.2.3",
     "@kachkaev/markdownlint-config": "^0.2.0",
     "@kachkaev/prettier-config": "^1.2.0",
-    "@next/eslint-plugin-next": "^12.0.5-canary.13",
+    "@next/eslint-plugin-next": "^12.0.5",
     "@types/hosted-git-info": "^3.0.2",
     "@types/lru-cache": "^5.1.1",
     "@types/node": "^16.11.11",
