--- a/package.json
+++ b/package.json
@@ -28,19 +28,11 @@
       "prettier --write"
     ]
   },
-  "resolutions": {
-    "@typescript-eslint/eslint-plugin": "^5.4.0",
-    "@typescript-eslint/parser": "^5.4.0",
-    "eslint-plugin-import": "^2.25.3",
-    "eslint-plugin-jest": "^25.2.4",
-    "eslint-plugin-json": "^3.1.0",
-    "eslint-plugin-testing-library": "^5.0.0"
-  },
   "dependencies": {
     "@kachkaev/react-inline-js": "^0.2.0",
     "hosted-git-info": "^4.0.2",
     "lru-cache": "^6.0.0",
-    "next": "^12.0.6-canary.0",
+    "next": "^12.0.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "styled-components": "^5.3.3",
@@ -49,23 +41,23 @@
     "use-dark-mode": "^2.3.1"
   },
   "devDependencies": {
-    "@kachkaev/eslint-config-react": "^0.2.3",
-    "@kachkaev/markdownlint-config": "^0.2.0",
-    "@kachkaev/prettier-config": "^1.2.0",
-    "@next/eslint-plugin-next": "^12.0.6-canary.0",
+    "@kachkaev/eslint-config-react": "^0.3.0",
+    "@kachkaev/markdownlint-config": "^0.3.0",
+    "@kachkaev/prettier-config": "^1.3.0",
+    "@next/eslint-plugin-next": "^12.0.7",
     "@types/hosted-git-info": "^3.0.2",
     "@types/lru-cache": "^5.1.1",
-    "@types/node": "^16.11.11",
-    "@types/react": "^17.0.37",
-    "@types/styled-components": "^5.1.16",
-    "eslint": "^8.4.0",
+    "@types/node": "^17.0.5",
+    "@types/react": "^17.0.38",
+    "@types/styled-components": "^5.1.19",
+    "eslint": "^8.5.0",
     "husky": "^7.0.4",
-    "lint-staged": "^12.1.2",
+    "lint-staged": "^12.1.4",
     "markdownlint-cli": "^0.30.0",
     "ncp": "^2.0.0",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.5.0",
-    "typescript": "^4.5.2"
+    "prettier": "^2.5.1",
+    "typescript": "^4.5.4"
   },
   "packageManager": "yarn@3.1.1"
 }
