--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "dev": "next dev",
     "fix": "npm-run-all --continue-on-error \"fix:*\"",
     "fix:eslint": "eslint --fix \"**/*\"",
-    "fix:markdownlint": "markdownlint --fix \"**/*\"",
+    "fix:markdownlint": "markdownlint --dot --fix \"**/*\"",
     "fix:prettier": "prettier --write \"**/*\"",
     "fix:yarn-dedupe": "yarn dedupe",
     "lint": "npm-run-all --continue-on-error \"lint:*\"",
     "lint:eslint": "eslint \"**/*\" --report-unused-disable-directives",
-    "lint:markdownlint": "markdownlint \"**/*\"",
+    "lint:markdownlint": "markdownlint --dot \"**/*\"",
     "lint:prettier": "prettier --check \"**/*\"",
     "lint:tsc": "tsc --project .",
     "lint:yarn-dedupe": "yarn dedupe --check",
