--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "@kachkaev/react-inline-js": "^0.4.0",
     "hosted-git-info": "^4.1.0",
     "lru-cache": "^6.0.0",
-    "next": "^12.0.8-canary.21",
+    "next": "^12.0.8",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "styled-components": "^5.3.3",
@@ -44,7 +44,7 @@
     "@kachkaev/eslint-config-react": "^0.4.4",
     "@kachkaev/markdownlint-config": "^0.3.0",
     "@kachkaev/prettier-config": "^1.3.1",
-    "@next/eslint-plugin-next": "^12.0.8-canary.21",
+    "@next/eslint-plugin-next": "^12.0.8",
     "@rushstack/eslint-patch": "^1.1.0",
     "@types/hosted-git-info": "^3.0.2",
     "@types/lru-cache": "^5.1.1",
