Force-bump markdown-it to 12.3.2
Related: https://github.com/igorshubovych/markdownlint-cli/pull/255

--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
       "prettier --write"
     ]
   },
+  "resolutions": {
+    "markdown-it": "12.3.2"
+  },
   "dependencies": {
     "@kachkaev/react-inline-js": "^0.4.0",
     "hosted-git-info": "^4.1.0",
