Yarn Berry: Switch from from node_modules to PnP  (#161)

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,3 +1,9 @@
-nodeLinker: node-modules
+packageExtensions:
+  eslint-module-utils@*:
+    dependencies:
+      eslint-import-resolver-node: "*"
+  styled-components@*:
+    dependencies:
+      react-is: "*"
 
 yarnPath: .yarn/releases/yarn-3.1.1.cjs
