--- a/.eslintignore
+++ b/.eslintignore
@@ -19,13 +19,13 @@
 ########################
 
 # dependencies
+.pnp.*
 .yarn/*
 !.yarn/patches
 !.yarn/plugins
 !.yarn/releases
 !.yarn/sdks
 !.yarn/versions
-node_modules
 
 # testing
 /coverage
