--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@kachkaev/markdownlint-config": "^0.3.0",
     "@kachkaev/prettier-config": "^1.3.1",
     "@next/eslint-plugin-next": "^12.0.9",
+    "@rushstack/eslint-patch": "^1.1.0",
     "@types/hosted-git-info": "^3.0.2",
     "@types/lru-cache": "^5.1.1",
     "@types/node": "^17.0.13",
