--- a/cli/package.json
+++ b/cli/package.json
@@ -40,6 +40,6 @@
     "open": "^8.4.0"
   },
   "engines": {
-    "node": "^12.20.0 || ^14.13.1 || >=16.0.0"
+    "node": "^14.18.0 || >=16.0.0"
   }
 }
