--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
     "hosted-git-info": "^5.0.0",
     "lru-cache": "^7.7.1",
     "next": "^12.1.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.0.0-rc.3",
+    "react-dom": "^18.0.0-rc.3",
     "styled-components": "^5.3.5",
     "styled-normalize": "^8.0.7",
     "url": "^0.11.0",
