--- a/package.json
+++ b/package.json
@@ -31,10 +31,10 @@
   "dependencies": {
     "@kachkaev/react-inline-js": "^0.4.0",
     "hosted-git-info": "^5.0.0",
-    "lru-cache": "^7.7.1",
-    "next": "^12.1.1",
-    "react": "^18.0.0-rc.3",
-    "react-dom": "^18.0.0-rc.3",
+    "lru-cache": "^7.7.3",
+    "next": "^12.1.4",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "styled-components": "^5.3.5",
     "styled-normalize": "^8.0.7",
     "url": "^0.11.0",
@@ -44,10 +44,10 @@
     "@kachkaev/eslint-config-react": "^0.4.5",
     "@kachkaev/markdownlint-config": "^0.3.0",
     "@kachkaev/prettier-config": "^1.3.1",
-    "@next/eslint-plugin-next": "^12.1.1",
+    "@next/eslint-plugin-next": "^12.1.4",
     "@rushstack/eslint-patch": "^1.1.1",
     "@types/hosted-git-info": "^3.0.2",
-    "@types/lru-cache": "^7.6.0",
+    "@types/lru-cache": "^7.6.1",
     "@types/node": "^17.0.23",
     "@types/react": "^17.0.43",
     "@types/styled-components": "^5.1.24",
@@ -57,7 +57,7 @@
     "markdownlint-cli": "^0.31.1",
     "ncp": "^2.0.0",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.6.1",
+    "prettier": "^2.6.2",
     "typescript": "^4.6.3"
   },
   "packageManager": "yarn@3.2.0"
