--- a/package.json
+++ b/package.json
@@ -60,5 +60,5 @@
     "prettier": "^2.6.2",
     "typescript": "^4.6.3"
   },
-  "packageManager": "yarn@3.2.0"
+  "packageManager": "yarn@4.0.0-rc.23"
 }
