--- a/cli/package.json
+++ b/cli/package.json
@@ -27,17 +27,22 @@
     "name": "Alexander Kachkaev",
     "email": "alexander@kachkaev.ru"
   },
+  "type": "module",
+  "main": "main.js",
   "bin": "cli.js",
   "scripts": {
     "prepublishOnly": "yarn ncp ../README.md README.md"
   },
   "dependencies": {
-    "chalk": "^4.1.2",
-    "commander": "^8.3.0",
+    "chalk": "^5.1.2",
+    "commander": "^9.4.1",
     "find-package-json": "^1.2.0",
     "open": "^8.4.0"
   },
+  "devDependencies": {
+    "ncp": "^2.0.0"
+  },
   "engines": {
-    "node": ">=12.17"
+    "node": "^14.18.0 || >=16.0.0"
   }
 }
