--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,5 +17,5 @@
     "incremental": true
   },
   "exclude": [],
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"]
+  "include": ["next-env.d.ts", "**/*.cjs", "**/*.ts", "**/*.tsx"]
 }
