--- a/.eslintignore
+++ b/.eslintignore
@@ -2,11 +2,11 @@
 ## Specific to ESLint
 #####################
 
-# Ignore all files (but still allow sub-folder scanning)
+## ignore all files (but still allow sub-folder scanning)
 *
 !*/
 
-# Allow certain file types
+## allow certain file types
 !*.cjs
 !*.js
 !*.json
@@ -18,7 +18,7 @@
 ## Same as in .gitignore
 ########################
 
-# dependencies
+## dependencies
 .pnp.*
 .yarn/*
 !.yarn/patches
@@ -27,24 +27,24 @@
 !.yarn/sdks
 !.yarn/versions
 
-# testing
+## testing
 /coverage
 
-# next.js
+## next.js
 /.next/
 /out/
 tsconfig.tsbuildinfo
 
-# misc
+## misc
 .DS_Store
 .env*
 
-# debug
+## debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# custom
+## custom
 cli/README.md
 
 #########################
