--- a/.markdownlintignore
+++ b/.markdownlintignore
@@ -2,18 +2,18 @@
 ## Specific to Markdownlint
 ###########################
 
-# Ignore all files (but still allow sub-folder scanning)
+## ignore all files (but still allow sub-folder scanning)
 *
 !*/
 
-# Allow certain file types
+## allow certain file types
 !*.md
 
 ########################
 ## Same as in .gitignore
 ########################
 
-# dependencies
+## dependencies
 .pnp.*
 .yarn/*
 !.yarn/patches
@@ -22,24 +22,24 @@
 !.yarn/sdks
 !.yarn/versions
 
-# testing
+## testing
 /coverage
 
-# next.js
+## next.js
 /.next/
 /out/
 tsconfig.tsbuildinfo
 
-# misc
+## misc
 .DS_Store
 .env*
 
-# debug
+## debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# custom
+## custom
 cli/README.md
 
 #########################
