--- a/package.json
+++ b/package.json
@@ -29,10 +29,14 @@
       "prettier --write"
     ]
   },
+  "resolutions": {
+    "@typescript-eslint/eslint-plugin": "^5.43.1-alpha.22",
+    "@typescript-eslint/parser": "^5.43.1-alpha.22"
+  },
   "dependencies": {
     "hosted-git-info": "^6.1.1",
     "lru-cache": "^7.14.1",
-    "next": "^13.0.2",
+    "next": "^13.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "styled-components": "^5.3.6",
@@ -40,22 +44,22 @@
     "url": "^0.11.0"
   },
   "devDependencies": {
-    "@kachkaev/eslint-config-react": "^0.5.0",
+    "@kachkaev/eslint-config-react": "^0.5.1",
     "@kachkaev/markdownlint-config": "^0.5.0",
     "@kachkaev/prettier-config": "^1.4.0",
-    "@next/eslint-plugin-next": "^13.0.2",
+    "@next/eslint-plugin-next": "^13.0.4",
     "@rushstack/eslint-patch": "^1.2.0",
     "@types/hosted-git-info": "^3.0.2",
     "@types/node": "^18.11.9",
     "@types/react": "^18.0.25",
     "@types/styled-components": "^5.1.26",
-    "eslint": "^8.27.0",
+    "eslint": "^8.28.0",
     "husky": "^8.0.2",
     "lint-staged": "^13.0.3",
     "markdownlint-cli": "^0.32.2",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.7.1",
-    "typescript": "^4.8.4"
+    "typescript": "^4.9.3"
   },
-  "packageManager": "yarn@4.0.0-rc.27"
+  "packageManager": "yarn@4.0.0-rc.30"
 }
