--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,7 +1,10 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": ["config:base"],
+
   "rangeStrategy": "bump",
+  "postUpdateOptions": ["yarnDedupeFewer"],
+
   "packageRules": [
     {
       "matchDepTypes": ["devDependencies"],
