--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     ]
   },
   "dependencies": {
+    "@vercel/analytics": "^0.1.10",
     "hosted-git-info": "^6.1.1",
     "lru-cache": "^7.17.0",
     "next": "^13.2.1",
