--- a/package.json
+++ b/package.json
@@ -43,7 +43,6 @@
   "devDependencies": {
     "@kachkaev/eslint-config-react": "0.5.1",
     "@kachkaev/markdownlint-config": "0.5.0",
-    "@kachkaev/prettier-config": "1.4.0",
     "@next/eslint-plugin-next": "13.3.1",
     "@rushstack/eslint-patch": "1.2.0",
     "@types/hosted-git-info": "3.0.2",
@@ -55,7 +54,9 @@
     "lint-staged": "13.2.1",
     "markdownlint-cli": "0.33.0",
     "npm-run-all": "4.1.5",
-    "prettier": "2.8.8",
+    "prettier": "3.0.0-alpha.6",
+    "prettier-plugin-packagejson": "2.4.3",
+    "prettier-plugin-sh": "0.12.8",
     "typescript": "5.0.4"
   },
   "packageManager": "yarn@4.0.0-rc.42"
