Replace yarn with pnpm

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -6,7 +6,7 @@
     ":semanticCommitsDisabled"
   ],
 
-  "postUpdateOptions": ["yarnDedupeHighest"],
+  "postUpdateOptions": ["pnpmDedupe"],
 
   "packageRules": [
     {
