--- a/.eslintignore
+++ b/.eslintignore
@@ -19,16 +19,7 @@
 ########################
 
 ## dependencies
-.pnp.*
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/sdks
-!.yarn/versions
-
-## testing
-/coverage
+node_modules
 
 ## next.js
 /.next/
@@ -39,11 +30,6 @@ tsconfig.tsbuildinfo
 .DS_Store
 .env*
 
-## debug
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
 ## custom
 cli/README.md
 
@@ -52,4 +38,4 @@ cli/README.md
 #########################
 
 .git/
-.yarn/
+.pnpm-lock.yaml
