--- a/.markdownlintignore
+++ b/.markdownlintignore
@@ -14,16 +14,7 @@
 ########################
 
 ## dependencies
-.pnp.*
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/sdks
-!.yarn/versions
-
-## testing
-/coverage
+node_modules
 
 ## next.js
 /.next/
@@ -34,11 +25,6 @@ tsconfig.tsbuildinfo
 .DS_Store
 .env*
 
-## debug
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
 ## custom
 cli/README.md
 
@@ -47,4 +33,4 @@ cli/README.md
 #########################
 
 .git/
-.yarn/
+.pnpm-lock.yaml
