--- a/.prettierignore
+++ b/.prettierignore
@@ -21,16 +21,7 @@
 ########################
 
 ## dependencies
-.pnp.*
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/sdks
-!.yarn/versions
-
-## testing
-/coverage
+node_modules
 
 ## next.js
 /.next/
@@ -41,11 +32,6 @@ tsconfig.tsbuildinfo
 .DS_Store
 .env*
 
-## debug
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
 ## custom
 cli/README.md
 
@@ -54,4 +40,4 @@ cli/README.md
 #########################
 
 .git/
-.yarn/
+.pnpm-lock.yaml
