--- a/cli/package.json
+++ b/cli/package.json
@@ -31,7 +31,7 @@
   "main": "main.js",
   "bin": "cli.js",
   "scripts": {
-    "prepack": "yarn ncp ../README.md README.md"
+    "prepack": "pnpm ncp ../README.md README.md"
   },
   "dependencies": {
     "chalk": "^5.3.0",
