--- a/package.json
+++ b/package.json
@@ -2,23 +2,20 @@
   "private": true,
   "license": "BSD-3-Clause",
   "type": "module",
-  "workspaces": [
-    "cli"
-  ],
   "scripts": {
     "build": "next build",
     "dev": "next dev",
     "fix": "npm-run-all --continue-on-error \"fix:*\"",
     "fix:eslint": "eslint --fix .",
     "fix:markdownlint": "markdownlint --dot --fix .",
+    "fix:pnpm-dedupe": "pnpm dedupe",
     "fix:prettier": "prettier --write .",
-    "fix:yarn-dedupe": "yarn dedupe",
     "lint": "npm-run-all --continue-on-error \"lint:*\"",
     "lint:eslint": "eslint .",
     "lint:markdownlint": "markdownlint --dot .",
+    "lint:pnpm-dedupe": "pnpm dedupe --check",
     "lint:prettier": "prettier --check .",
     "lint:tsc": "tsc --project .",
-    "lint:yarn-dedupe": "yarn dedupe --check",
     "postinstall": "husky install",
     "start": "next start"
   },
@@ -44,7 +41,6 @@
     "@kachkaev/eslint-config-react": "0.6.0",
     "@kachkaev/markdownlint-config": "0.5.0",
     "@next/eslint-plugin-next": "13.4.19",
-    "@rushstack/eslint-patch": "1.3.3",
     "@tsconfig/esm": "1.0.4",
     "@tsconfig/next": "2.0.0",
     "@tsconfig/strictest": "2.0.2",
@@ -62,5 +58,5 @@
     "prettier-plugin-sh": "0.13.1",
     "typescript": "5.1.6"
   },
-  "packageManager": "yarn@4.0.0-rc.48"
+  "packageManager": "pnpm@8.7.4"
 }
