--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,8 @@
     "@tsconfig/strictest/tsconfig.json"
   ],
   "compilerOptions": {
-    "moduleResolution": "nodenext"
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext"
   },
   "exclude": [],
   "include": ["next-env.d.ts", "**/*.cjs", "**/*.ts", "**/*.tsx"]
