Update Next.js config

--- a/package.json
+++ b/package.json
@@ -6,17 +6,17 @@
     "build": "next build",
     "dev": "next dev",
     "fix": "npm-run-all --continue-on-error \"fix:*\"",
-    "fix:eslint": "eslint --fix .",
+    "fix:eslint": "next typegen && eslint --fix .",
     "fix:markdownlint": "markdownlint --dot --fix .",
     "fix:pnpm-dedupe": "pnpm dedupe",
     "fix:prettier": "prettier --write .",
     "postinstall": "husky",
     "lint": "npm-run-all --continue-on-error \"lint:*\"",
-    "lint:eslint": "eslint .",
+    "lint:eslint": "next typegen && eslint .",
     "lint:markdownlint": "markdownlint --dot .",
     "lint:pnpm-dedupe": "pnpm dedupe --check",
     "lint:prettier": "prettier --check .",
-    "lint:tsc": "tsc --project .",
+    "lint:tsc": "next typegen && tsc --project .",
     "start": "next start"
   },
   "lint-staged": {
