--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
       "prettier --write"
     ]
   },
+  "prettier": "@kachkaev/prettier-config",
   "dependencies": {
     "@vercel/analytics": "1.5.0",
     "hosted-git-info": "8.1.0",
@@ -40,6 +41,7 @@
   "devDependencies": {
     "@kachkaev/eslint-config-react": "0.6.0",
     "@kachkaev/markdownlint-config": "0.5.0",
+    "@kachkaev/prettier-config": "2.1.3",
     "@next/eslint-plugin-next": "15.5.2",
     "@tsconfig/next": "2.0.3",
     "@tsconfig/strictest": "2.0.5",
@@ -52,8 +54,6 @@
     "markdownlint-cli": "0.45.0",
     "npm-run-all2": "8.0.4",
     "prettier": "3.6.2",
-    "prettier-plugin-packagejson": "2.5.19",
-    "prettier-plugin-sh": "0.18.0",
     "typescript": "5.9.2"
   },
   "packageManager": "pnpm@10.15.0"
